Fixes alignment for contact information and icons

--- a/css/custom.css
+++ b/css/custom.css
@@ -236,10 +236,14 @@ header .navbar-default .navbar-nav > li > .active {
     width: 100%;
     text-align: left;
   }
+  #contact li {
+    position: relative;
+  }
     #contact .info span {
       display: inline-block;
       margin: 0;
-      width: 50px;
+      width: 70px;
+      height: auto;
       text-align: center;
     }
     #contact .info i {
@@ -249,6 +253,8 @@ header .navbar-default .navbar-nav > li > .active {
       margin-top: 0;
       font-weight: 300;
       display: inline-block;
+      position: absolute;
+      top: 22px;
     }
   #contact form .field {
     width: 100%;
